FB- purchase accounts config, catch exceptions

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -174,7 +174,7 @@
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1641397412783742,101672655,1618450965145197,1422222644472180" /><!-- Didit,Zeel,Pongalo,PEN -->
     <!-- ?other configs? -->
-    <add key="FB_ConversionsAsPurchases" value="958472597545817" /><!-- Bevel -->
+    <add key="FB_ConversionsAsPurchases" value="958472597545817,105894915,1244370672289340,169435073491736" /><!-- Bevel,Pimsleur,RollingStone,CovenantHouse -->
     <add key="FB_ConversionsAsRegistrations" value="608703712617562" /><!-- LiquidSpace -->
 
     <add key="TD_SiteStats_ImpressionThreshold" value="100" /><!-- min # of impressions (n/a if conversions>0) -->
