update FB syncing + config transform

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.Release.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.Release.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+    <add key="SSRS_ReportServerUrl" value="http://173.204.123.91/ReportServer_SQL3" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SSRS_ReportServerUsername" value="reportviewertest" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SSRS_ReportServerPassword" value="sp0ngbOb" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
