--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -38,10 +38,8 @@
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
 
     <add key="SSRS_ReportServerUrl" value="http://biz/ReportServer_SQLEXPRESS" />
-    <!-- transform this for production! -->
-    <!--<add key="SSRS_ReportServerUrl" value="http://173.204.123.91/ReportServer_SQL3" />
-    <add key="SSRS_ReportServerUsername" value="reportviewertest" />
-    <add key="SSRS_ReportServerPassword" value="sp0ngbOb" />-->
+    <add key="SSRS_ReportServerUsername" value="" />
+    <add key="SSRS_ReportServerPassword" value="" />
 
     <!-- APIs -->
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
