--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Entities\Cake\OfferType.cs" />
     <Compile Include="Entities\Cake\Role.cs" />
     <Compile Include="Entities\Cake\Vertical.cs" />
+    <Compile Include="Entities\CPProg\Actions.cs" />
     <Compile Include="Entities\Currency.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -447,6 +448,10 @@
     <Compile Include="MigrationsTD\201703241459105_Mig_Network.Designer.cs">
       <DependentUpon>201703241459105_Mig_Network.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201703282116465_Mig_Actions.cs" />
+    <Compile Include="MigrationsTD\201703282116465_Mig_Actions.Designer.cs">
+      <DependentUpon>201703282116465_Mig_Actions.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -746,6 +751,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201703241459105_Mig_Network.resx">
       <DependentUpon>201703241459105_Mig_Network.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201703282116465_Mig_Actions.resx">
+      <DependentUpon>201703282116465_Mig_Actions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
