--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -460,6 +460,10 @@
     <Compile Include="MigrationsTD\201703302030137_Mig_AdSetAction.Designer.cs">
       <DependentUpon>201703302030137_Mig_AdSetAction.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201704181943349_Mig_PlatformTokens.cs" />
+    <Compile Include="MigrationsTD\201704181943349_Mig_PlatformTokens.Designer.cs">
+      <DependentUpon>201704181943349_Mig_PlatformTokens.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -768,6 +772,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201703302030137_Mig_AdSetAction.resx">
       <DependentUpon>201703302030137_Mig_AdSetAction.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201704181943349_Mig_PlatformTokens.resx">
+      <DependentUpon>201704181943349_Mig_PlatformTokens.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
