more FB Eaglemoss config IDs

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -58,7 +58,8 @@
     <add key="FacebookApiVersion" value="2.8" />
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1641397412783742,101672655,1618450965145197,1422222644472180,171116086713616" /><!-- Didit,Zeel,Pongalo,PEN,Nosey -->
-    <add key="FB_ConversionsAsPurchases" value="958472597545817,105894915,1244370672289340,169435073491736,10153692856642557,1389007494496139" /><!-- Bevel,Pimsleur,RollingStone,CovenantHouse,Catbird,Eaglemoss-STGraphicNovel -->
+    <add key="FB_ConversionsAsPurchases" value="958472597545817,105894915,1244370672289340,169435073491736,10153692856642557,1389007494496139,1414035381993350,1414037158659839,1414039745326247" />
+    <!-- Bevel,Pimsleur,RollingStone,CovenantHouse,Catbird, Eaglemoss-...STGraphicNovel,StarTrekRegularShips,WalkingDead,eCommerceShop -->
     <add key="FB_ConversionsAsRegistrations" value="608703712617562" /><!-- LiquidSpace -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
   </appSettings>
