Get/SavePlatformTokens, etc

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -191,6 +191,11 @@
     <add key="YAMMap_StrategyName" value="Line" />
     <add key="YAMMap_CreativeName" value="Ad" />
 
+    <add key="AdformAuthBaseUrl" value="https://id.adform.com/sts/connect/token" />
+    <add key="AdformClientID" value="portal.directagents.us@clients.adform.com" />
+    <add key="AdformClientSecret" value="zA6Fn7PEFk103Vf2FV93NzP66d2411QHL817m7B54B" />
+    <add key="AdformBaseUrl" value="https://api.adform.com" />
+
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
     <add key="AppleP12Location" value="C:\DA\portal\API\AppleCertificate{0}.p12" />
     <add key="AppleP12Password" value="appleda1" />
