YAMDailyConValExtacter - uses the PixelParameter string

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -196,6 +196,7 @@
     <add key="YAMMap_PostViewRev" value="ROAS Action Value" />
     <add key="YAMMap_StrategyName" value="Line" />
     <add key="YAMMap_CreativeName" value="Ad" />
+    <add key="YAMids_UsePixelParm" value="19685,27476" /><!-- CovHouse,LornaJane -->
 
     <add key="AdformAuthBaseUrl" value="https://id.adform.com/sts/connect/token" />
     <add key="AdformClientID" value="portal.directagents.us@clients.adform.com" />
