--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
   </configSections>
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -34,8 +35,8 @@
     <add key="SSRS_ReportServerUrl" value="http://173.204.123.91/ReportServer_SQL3" />
     <add key="SSRS_ReportServerUsername" value="reportviewertest" />
     <add key="SSRS_ReportServerPassword" value="sp0ngbOb" />
-
     <add key="ProgDemoAdvs" value="sees,seph,sony,winv" />
+    <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
@@ -196,4 +197,136 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <AdWordsApi>
+    <!--
+      This section contains the settings specific to AdWords and DoubleClick Ad
+      Exchange Buyer API DotNet Client Library. You can use the App.config /
+      Web.config for quickly configuring and running a simple application.
+      However, it is not mandatory to provide your settings in the config file,
+      you may also set or override these settings at runtime. See
+      https://code.google.com/p/google-api-adwords-dotnet/wiki/HowToUseAdWordsUser
+      for details.
+
+      You can refer to
+      https://code.google.com/p/google-api-adwords-dotnet/wiki/UnderstandingAppConfig
+      for detailed explanation of each configuration key.
+    -->
+
+    <!-- Settings related to SOAP logging. -->
+    <add key="LogPath" value="C:\Logs\" />
+    <add key="LogToFile" value="false" />
+    <add key="MaskCredentials" value="true" />
+    <add key="LogErrorsOnly" value="true" />
+
+    <!-- Settings related to general library behaviour. -->
+
+    <!-- Use this key to automatically retry a call that failed due to a
+         recoverable error like expired credentials. -->
+    <!-- <add key="RetryCount" value="1"/> -->
+
+    <!-- Set the service timeout in milliseconds. -->
+    <!-- <add key="Timeout" value="100000"/> -->
+
+    <!-- Use this key to enable or disable gzip compression in SOAP requests.-->
+    <add key="EnableGzipCompression" value="true" />
+
+    <!-- Proxy settings for library. -->
+    <add key="ProxyServer" value="" />
+    <add key="ProxyUser" value="" />
+    <add key="ProxyPassword" value="" />
+    <add key="ProxyDomain" value="" />
+
+    <!-- Settings specific to AdWords API.-->
+    <add key="UserAgent" value="direct-agents-client-portal" />
+    <add key="DeveloperToken" value="kEw3EPUPKDwKFpjRRIpm5Q" />
+
+    <!-- If your application is a simple script that makes calls to only a
+         single Adwords account, then you can set your customer ID here. If you
+         have multiple customer IDs to deal with in your account, then you can
+         comment out this key and set the value at runtime by setting
+         ((AdWordsAppConfig) user.Config).ClientCustomerId = "xxx";
+    -->
+    <!--<add key="ClientCustomerId" value="707-036-4439"/>-->
+
+    <!-- Use the following setting to include zero impression rows when
+         downloading a report. If this setting is commented out, then the server
+         behaves as explained in
+         https://developers.google.com/adwords/api/docs/guides/zero-impression-reports#default_behavior.
+    -->
+    <add key="IncludeZeroImpressions" value="false" />
+
+    <!--<add key="SkipReportHeader" value="false" />
+    <add key="SkipReportSummary" value="false" />
+    <add key="SkipColumnHeader" value="false" />-->
+
+    <!-- Settings specific to use OAuth2 as authentication mechanism. You could
+         run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
+         config file.
+    -->
+    <add key="AuthorizationMethod" value="OAuth2" />
+    <!-- Provide the OAuth2 client ID and secret. You can create one from
+         https://code.google.com/apis/console/. See
+         https://code.google.com/p/google-api-adwords-dotnet/wiki/UsingOAuth
+         for more details.
+    -->
+    <add key="OAuth2ClientId" value="960492209499.apps.googleusercontent.com" />
+    <add key="OAuth2ClientSecret" value="YQm_OT5fK7kRARqJnfzmgukv" />
+
+    <!-- The following OAuth2 settings are optional. -->
+    <!-- Provide a different OAuth2 scope if required. Multiple scopes should be
+         separated by spaces. -->
+    <!-- <add key="OAuth2Scope" value="INSERT_OAUTH2_SCOPE_HERE" /> -->
+
+    <!-- Use the following keys if you want to use Web / Installed application
+         OAuth flow.-->
+
+    <add key="OAuth2Mode" value="APPLICATION" />
+    <!-- If you are using a single MCC account's credentials to make calls to
+         all your accounts, then you can run OAuth2TokenGenerator.cs to generate
+         a RefreshToken for that account and set this key in your application's
+         App.config / Web.config. If you are making calls to multiple unrelated
+         accounts, then you need to implement OAuth2 flow in your account and
+         set this key at runtime. See OAuth folder under Examples folder for a
+         web and a console application example.
+    -->
+    <add key="OAuth2RefreshToken" value="1/Xw4TBUGFdNlqa547PbwWQNWJPGUkzr3jwrcZAfPJOwE" />
+
+    <!-- Optional: Specify an OAuth2 redirect url if you are building a
+         web application and implementing OAuth2 web flow in your application.
+    -->
+    <!-- <add key="OAuth2RedirectUri" value="" /> -->
+
+    <!-- Use the following keys if you want to use OAuth2 service account flow.
+         You should comment out all the keys for Web / Installed application
+         OAuth flow above. See
+         https://developers.google.com/adwords/api/docs/guides/service-accounts
+         and https://code.google.com/p/google-api-adwords-dotnet/wiki/UsingOAuth
+         for more details.
+    -->
+    <!--
+    <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
+    <add key="OAuth2ServiceAccountEmail"
+        value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
+    <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
+    <add key="OAuth2JwtCertificatePath"
+        value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
+    <add key="OAuth2JwtCertificatePassword"
+        value="INSERT_OAUTH2_JWT_CERTIFICATE_PASSWORD_HERE" />
+    -->
+
+    <!-- Settings specific to use ClientLogin as authentication mechanism. -->
+    <!-- To use ClientLogin as authentication mechanism, uncomment the following
+         section and comment the OAuth2 section above. Keep in mind that
+         ClientLogin API is deprecated, and its use is strongly discouraged.
+         See https://developers.google.com/accounts/docs/AuthForInstalledApps
+         for details.-->
+    <!--
+    <add key="AuthorizationMethod" value="ClientLogin" />
+    <add key="Email" value="aaron@directagents.com"/>
+    <add key="Password" value="Welcome2010"/>
+    -->
+    <!-- Optional: uncomment this if you want to reuse an authToken multiple
+         times. -->
+    <!-- <add key="AuthToken" value="INSERT_YOUR_AUTH_TOKEN_HERE"/> -->
+  </AdWordsApi>
 </configuration>
