synch searchaccounts (web) - bing,apple

--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -36,7 +36,18 @@
     <add key="SSRS_ReportServerUsername" value="reportviewertest" />
     <add key="SSRS_ReportServerPassword" value="sp0ngbOb" />
     <add key="ProgDemoAdvs" value="sees,seph,sony,winv" />
+
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
+    <add key="BingCustomerID" value="234647" />
+    <add key="BingApiToken" value="006XNV7E81834904" />
+    <add key="BingApiUsername" value="dancowen" />
+    <add key="BingApiPassword" value="agentdan" />
+    <add key="BingRedirectionUri" value="https://login.live.com/oauth20_desktop.srf" />
+    <add key="BingReportFolder" value="C:\Downloads" />
+    <add key="BingReportFilename" value="bingrep.zip" />
+    <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
+    <add key="AppleP12Location" value="C:\DA\portal\API\AppleCertificate{0}.p12" />
+    <add key="AppleP12Password" value="appleda1" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
