--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -55,6 +55,10 @@
       <HintPath>..\packages\FluentValidationNA.1.2.16\lib\net40\FluentValidationNA.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="HttpAuthModule, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HttpAuthModule.2.2.2.0\lib\net45\HttpAuthModule.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="KendoGridBinderEx, Version=5.0.0.9, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\KendoGridBinderEx.5.0.0.10\lib\net45\KendoGridBinderEx.dll</HintPath>
       <Private>True</Private>
@@ -841,6 +845,7 @@
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
