--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -8,6 +8,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
+    <section name="httpAuthModule" type="System.Configuration.NameValueFileSectionHandler" />
   </configSections>
   <connectionStrings>
     <add name="ABContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
@@ -135,6 +136,15 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
+        <modules>
+              <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />
+        </modules>
+        <security>
+            <authentication>
+                <windowsAuthentication enabled="false" />
+                <anonymousAuthentication enabled="true" />
+            </authentication>
+        </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -323,4 +333,38 @@
          times. -->
     <!-- <add key="AuthToken" value="INSERT_YOUR_AUTH_TOKEN_HERE"/> -->
   </AdWordsApi>
+  <httpAuthModule>
+    <!-- If HttpAuthModule has problems, please contact me, https://github.com/nabehiro/HttpAuthModule -->
+    <!--
+      [required] Http Authentication Mode.
+      - Basic: Basic authentication
+      - Digest: Digest authentication
+      - None: No authentication -->
+    <add key="AuthMode" value="Digest" />
+    <!-- [optional] default is "SecureZone" -->
+    <add key="Realm" value="SecureZone" />
+    <!-- [required if http auth on] user1:pass1;user2:pass2;... -->
+    <add key="Credentials" value="admin:da@dmin;" />
+    <!-- [optional] Digest Auth Nonce Valid Duration Minutes. default is 120 -->
+    <add key="DigestNonceValidDuration" value="120" />
+    <!-- [required if digest auth on] Digest Auth Nonce Salt -->
+    <add key="DigestNonceSalt" value="uht9987bbbSAX" />
+    <!--
+      [optional] If set, specified IPs are only allowed: otherwize All IPs are allowed.
+      value is joined IP Range Combination as following.
+      - 10.23.0.0/24
+      - 127.0.0.1 (equals to 127.0.0.1/32)
+      - 2001:0db8:bd05:01d2:288a:1fc0:0001:0000/16
+      - ::1 (equals to ::1/128)
+
+      e.g) 127.0.0.1;182.249.0.0/16;182.248.112.128/26;::1 -->
+    <add key="RestrictIPAddresses" value="104.192.219.26;65.200.54.234;::1"/><!-- NY, LA -->
+    <!-- [optional] If set, specified pattern url requests are skipped by http auth and IP Restriction. -->
+    <!-- <add key="IgnorePathRegex" value="^/Home/Ignore$|^/Ignore\.aspx$|^/Content/"/> -->
+    <!--
+      [optional] If set,specified IPs requests skip http auth Restriction.
+      value format is same as 'RestrictIPAddresses'
+    -->
+    <!--<add key="IgnoreIPAddresses" value="127.0.0.1;::1"/>-->
+  </httpAuthModule>
 </configuration>
