--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -469,6 +469,10 @@
     <Compile Include="MigrationsTD\201706032006209_Mig_AdSetActionVals.Designer.cs">
       <DependentUpon>201706032006209_Mig_AdSetActionVals.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201707142009302_Mig_Account_Disabled.cs" />
+    <Compile Include="MigrationsTD\201707142009302_Mig_Account_Disabled.Designer.cs">
+      <DependentUpon>201707142009302_Mig_Account_Disabled.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -791,6 +795,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201706032006209_Mig_AdSetActionVals.resx">
       <DependentUpon>201706032006209_Mig_AdSetActionVals.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201707142009302_Mig_Account_Disabled.resx">
+      <DependentUpon>201707142009302_Mig_Account_Disabled.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
