--- a/3/DirectAgents.Web/DirectAgents.Web/Web.Release.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.Release.config
@@ -34,4 +34,10 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <modules>
+      <!-- this just for Azure -->
+      <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" xdt:Transform="Insert" />
+    </modules>
+  </system.webServer>
 </configuration>
