--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -136,15 +136,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
-        <modules>
-              <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />
-        </modules>
-        <security>
-            <authentication>
-                <windowsAuthentication enabled="false" />
-                <anonymousAuthentication enabled="true" />
-            </authentication>
-        </security>
+    <modules>
+      <!-- add this on Azure... (Release config) -->
+      <!--<add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />-->
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
